POWR-296 updates to the homepage fonts to pick up modular scale

--- a/web/sites/default/config/views.view.topics.yml
+++ b/web/sites/default/config/views.view.topics.yml
@@ -62,7 +62,7 @@ display:
           automatic_width: false
           alignment: horizontal
           col_class_default: false
-          col_class_custom: col-sm
+          col_class_custom: 'col-sm topic'
           row_class_default: false
           row_class_custom: row
       row:
@@ -200,7 +200,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<h3 class="topic"><a href="{{ view_taxonomy_term }}"{{ field_fontawesome_icon }}>{{ name }}</a></h3>'
+            text: '<h3><a href="{{ view_taxonomy_term }}"{{ field_fontawesome_icon }}>{{ name }}</a></h3>'
             make_link: false
             path: ''
             absolute: false
@@ -266,7 +266,7 @@ display:
           exclude: false
           alter:
             alter_text: false
-            text: ''
+            text: '<p class="topic-description">{{ description__value__value }}</p>'
             make_link: false
             path: ''
             absolute: false
@@ -298,7 +298,7 @@ display:
           element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
-          element_default_classes: true
+          element_default_classes: false
           empty: ''
           hide_empty: false
           empty_zero: false
