POWR-93 Fixed issued reported by QA

--- a/web/sites/default/config/core.entity_view_display.media.image.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.media.image.field_media_in_library
     - field.field.media.image.image
+    - image.style.large
     - media.type.image
   module:
     - image
@@ -20,7 +21,7 @@ content:
     weight: 1
     label: hidden
     settings:
-      image_style: ''
+      image_style: large
       image_link: ''
     third_party_settings: {  }
     region: content
