--- a/web/sites/default/config/core.entity_form_display.paragraph.video.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.video.default.yml
@@ -20,12 +20,12 @@ content:
     settings:
       entity_browser: video_browser
       field_widget_display: rendered_entity
-      field_widget_edit: true
       field_widget_remove: true
       open: true
       selection_mode: selection_append
       field_widget_display_settings:
         view_mode: thumbnail
+      field_widget_edit: false
     region: content
     third_party_settings: {  }
   moderation_state:
