POWR-93 Remove Edit button for document paragraph.

--- a/web/sites/default/config/core.entity_form_display.paragraph.document.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.document.default.yml
@@ -19,10 +19,10 @@ content:
     settings:
       entity_browser: document_browser
       field_widget_display: label
-      field_widget_edit: true
       field_widget_remove: true
       open: true
       selection_mode: selection_append
+      field_widget_edit: false
       field_widget_display_settings: {  }
     third_party_settings: {  }
     type: entity_browser_entity_reference
