POWR-259 Removed menu_markup module and used custom code in portland module instead to modify Alerts menu item, lookup number of published alerts, and uses cache to store value; added Alerts views page to the main menu;

--- a/web/sites/default/config/views.view.alerts.yml
+++ b/web/sites/default/config/views.view.alerts.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.node.field_severity
     - field.storage.node.field_summary
     - node.type.alert
+    - system.menu.main
     - workflows.workflow.editorial
   module:
     - content_moderation
@@ -569,6 +570,15 @@ display:
       css_class: always-show
       defaults:
         css_class: false
+      menu:
+        type: normal
+        title: Alerts
+        description: ''
+        expanded: false
+        parent: ''
+        weight: 0
+        context: '0'
+        menu_name: main
     cache_metadata:
       max-age: -1
       contexts:
