POWR-259 - Added Alerts views page and added to main nav, added code to portland module to modify Alerts nav item to display number of active alerts, hide alerts block on Alerts views page, added always-show class to always show alerts on Alerts page.

--- a/web/sites/default/config/views.view.alerts.yml
+++ b/web/sites/default/config/views.view.alerts.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.node.field_severity
     - field.storage.node.field_summary
     - node.type.alert
+    - system.menu.main
     - workflows.workflow.editorial
   module:
     - content_moderation
@@ -547,6 +548,37 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - 'user.node_grants:view'
+        - user.permissions
+      tags:
+        - 'config:field.storage.node.field_severity'
+        - 'config:field.storage.node.field_summary'
+        - 'config:workflow_list'
+  page_1:
+    display_plugin: page
+    id: page_1
+    display_title: Page
+    position: 1
+    display_options:
+      display_extenders: {  }
+      path: alerts
+      menu:
+        type: normal
+        title: Alerts
+        description: ''
+        expanded: false
+        parent: ''
+        weight: -48
+        context: '0'
+        menu_name: main
+      css_class: always-show
+      defaults:
+        css_class: false
     cache_metadata:
       max-age: -1
       contexts:
