POWR-310 updates to taxonomy term pages linked from homepage

--- a/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-3.yml
+++ b/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-3.yml
@@ -5,7 +5,8 @@ dependencies:
   config:
     - page_manager.page.taxonomy_term_page
     - views.view.groups_by_audience
-    - views.view.services_by_term
+    - views.view.services_by_topic
+    - views.view.services_by_topic_without_action
   module:
     - ctools
     - ctools_block
@@ -16,17 +17,6 @@ label: Audiences
 variant: panels_variant
 variant_settings:
   blocks:
-    9b8f3c68-d2b8-40ac-8406-0b714e60e0f6:
-      id: 'views_block:services_by_term-block_1'
-      label: ''
-      provider: views
-      label_display: visible
-      views_label: ''
-      items_per_page: none
-      region: first
-      weight: 0
-      uuid: 9b8f3c68-d2b8-40ac-8406-0b714e60e0f6
-      context_mapping: {  }
     38b66ac6-c491-4902-b71c-990d5f15c1f0:
       id: 'views_block:groups_by_audience-block_1'
       label: ''
@@ -34,8 +24,8 @@ variant_settings:
       label_display: visible
       views_label: ''
       items_per_page: none
-      region: third
-      weight: 0
+      region: content
+      weight: 2
       uuid: 38b66ac6-c491-4902-b71c-990d5f15c1f0
       context_mapping: {  }
     f6c19af3-0875-49f0-900f-3695d9b18ae0:
@@ -43,7 +33,7 @@ variant_settings:
       label: 'Page title'
       provider: core
       label_display: '0'
-      region: top
+      region: content
       weight: -1
       uuid: f6c19af3-0875-49f0-900f-3695d9b18ae0
       context_mapping: {  }
@@ -58,16 +48,38 @@ variant_settings:
         settings: {  }
         third_party_settings: {  }
         weight: 0
-      region: top
+      region: content
       weight: 0
       uuid: 237c9545-e57f-42d9-baac-7cdc13718381
       context_mapping:
         entity: taxonomy_term
+    9ae5f9f1-fb5e-412a-9757-09aef7220e62:
+      id: 'views_block:services_by_topic-block_1'
+      label: ''
+      provider: views
+      label_display: visible
+      views_label: ''
+      items_per_page: none
+      region: content
+      weight: 0
+      uuid: 9ae5f9f1-fb5e-412a-9757-09aef7220e62
+      context_mapping: {  }
+    beccb412-26a0-42a6-9eb4-f4bdcca59868:
+      id: 'views_block:services_by_topic_without_action-block_1'
+      label: ''
+      provider: views
+      label_display: visible
+      views_label: ''
+      items_per_page: none
+      region: content
+      weight: 0
+      uuid: beccb412-26a0-42a6-9eb4-f4bdcca59868
+      context_mapping: {  }
   id: panels_variant
   uuid: 96b5ad4a-b6d6-4df4-ad5a-9efa3c9e3022
   label: null
   weight: 0
-  layout: layout_threecol_33_34_33
+  layout: layout_onecol
   layout_settings: {  }
   page_title: '[term:name]'
   storage_type: page_manager
