--- a/web/sites/default/config/views.view.services_by_topic_without_action.yml
+++ b/web/sites/default/config/views.view.services_by_topic_without_action.yml
@@ -1,16 +1,18 @@
-uuid: ec97f43e-1765-4fe9-b26d-d647935a261b
+uuid: 35786be7-14da-4668-b0fe-66e2abd584a0
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.node.field_summary
+    - field.storage.taxonomy_term.field_fontawesome_icon
     - node.type.city_service
+    - taxonomy.vocabulary.community_actions
   module:
     - node
     - taxonomy
     - user
-id: services_by_term
-label: 'Services by term'
+id: services_by_topic_without_action
+label: 'Services by topic without action'
 module: views
 description: ''
 tag: ''
@@ -61,10 +63,15 @@ display:
           row_class: 'col-md-6 col-lg-4 mb-3'
           default_row_class: false
           type: ul
-          wrapper_class: list-item
+          wrapper_class: item-list
           class: 'list-unstyled row'
       row:
         type: fields
+        options:
+          default_field_elements: false
+          inline: {  }
+          separator: ''
+          hide_empty: false
       fields:
         title:
           id: title
@@ -102,7 +109,7 @@ display:
             trim: false
             preserve_tags: ''
             html: false
-          element_type: ''
+          element_type: h4
           element_class: ''
           element_label_type: ''
           element_label_class: ''
@@ -172,7 +179,7 @@ display:
           element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
-          element_default_classes: false
+          element_default_classes: true
           empty: ''
           hide_empty: false
           empty_zero: false
@@ -225,7 +232,70 @@ display:
           element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
-          element_default_classes: false
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_fontawesome_icon:
+          id: field_fontawesome_icon
+          table: taxonomy_term__field_fontawesome_icon
+          field: field_fontawesome_icon
+          relationship: field_community_actions
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
           empty: ''
           hide_empty: false
           empty_zero: false
@@ -315,7 +385,64 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: bundle
+        field_community_actions_target_id:
+          id: field_community_actions_target_id
+          table: node__field_community_actions
+          field: field_community_actions_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: empty
+          value: {  }
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          type: select
+          limit: true
+          vid: community_actions
+          hierarchy: false
+          error_message: true
+          plugin_id: taxonomy_index_tid
       sorts:
+        weight:
+          id: weight
+          table: taxonomy_term_field_data
+          field: weight
+          relationship: field_community_actions
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          entity_type: taxonomy_term
+          entity_field: weight
+          plugin_id: standard
         title:
           id: title
           table: node_field_data
@@ -330,11 +457,20 @@ display:
           entity_type: node
           entity_field: title
           plugin_id: standard
-      title: Services
+      title: 'Other services'
       header: {  }
       footer: {  }
       empty: {  }
-      relationships: {  }
+      relationships:
+        field_community_actions:
+          id: field_community_actions
+          table: node__field_community_actions
+          field: field_community_actions
+          relationship: none
+          group_type: group
+          admin_label: 'field_community_actions: Taxonomy term'
+          required: false
+          plugin_id: standard
       arguments:
         tid:
           id: tid
@@ -384,10 +520,12 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
+        - user
         - 'user.node_grants:view'
         - user.permissions
       tags:
         - 'config:field.storage.node.field_summary'
+        - 'config:field.storage.taxonomy_term.field_fontawesome_icon'
   block_1:
     display_plugin: block
     id: block_1
@@ -395,7 +533,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      block_description: 'Services by term'
+      block_description: 'Services by topic without action'
       block_hide_empty: true
     cache_metadata:
       max-age: -1
@@ -403,7 +541,9 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
+        - user
         - 'user.node_grants:view'
         - user.permissions
       tags:
         - 'config:field.storage.node.field_summary'
+        - 'config:field.storage.taxonomy_term.field_fontawesome_icon'
