--- a/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-0.yml
+++ b/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-0.yml
@@ -5,7 +5,8 @@ dependencies:
   config:
     - page_manager.page.taxonomy_term_page
     - views.view.groups_by_topic
-    - views.view.services_by_term
+    - views.view.services_by_topic
+    - views.view.services_by_topic_without_action
   module:
     - ctools
     - ctools_block
@@ -16,17 +17,6 @@ label: Topics
 variant: panels_variant
 variant_settings:
   blocks:
-    621e6c1f-427a-42bf-9b15-9c46ced6ca2a:
-      id: 'views_block:services_by_term-block_1'
-      label: ''
-      provider: views
-      label_display: visible
-      views_label: ''
-      items_per_page: none
-      region: first
-      weight: 0
-      uuid: 621e6c1f-427a-42bf-9b15-9c46ced6ca2a
-      context_mapping: {  }
     79c44e9c-966f-4ff4-8843-5dd407698ee0:
       id: 'views_block:groups_by_topic-block_1'
       label: ''
@@ -34,8 +24,8 @@ variant_settings:
       label_display: visible
       views_label: ''
       items_per_page: none
-      region: third
-      weight: 0
+      region: content
+      weight: 2
       uuid: 79c44e9c-966f-4ff4-8843-5dd407698ee0
       context_mapping: {  }
     7b8b40bb-1115-4ac2-858d-e23f95deb52e:
@@ -43,8 +33,8 @@ variant_settings:
       label: 'Page title'
       provider: core
       label_display: '0'
-      region: top
-      weight: -1
+      region: content
+      weight: -2
       uuid: 7b8b40bb-1115-4ac2-858d-e23f95deb52e
       context_mapping: {  }
     8b91f3d8-0579-43ae-9080-4ae482ef38d0:
@@ -58,16 +48,38 @@ variant_settings:
         settings: {  }
         third_party_settings: {  }
         weight: 0
-      region: top
-      weight: 0
+      region: content
+      weight: -1
       uuid: 8b91f3d8-0579-43ae-9080-4ae482ef38d0
       context_mapping:
         entity: taxonomy_term
+    f6176976-2383-47bd-8a19-da35dc1d613e:
+      id: 'views_block:services_by_topic-block_1'
+      label: ''
+      provider: views
+      label_display: visible
+      views_label: ''
+      items_per_page: none
+      region: content
+      weight: 0
+      uuid: f6176976-2383-47bd-8a19-da35dc1d613e
+      context_mapping: {  }
+    2fff8504-5649-4b36-9bda-2f3d730be700:
+      id: 'views_block:services_by_topic_without_action-block_1'
+      label: ''
+      provider: views
+      label_display: visible
+      views_label: ''
+      items_per_page: none
+      region: content
+      weight: 1
+      uuid: 2fff8504-5649-4b36-9bda-2f3d730be700
+      context_mapping: {  }
   id: panels_variant
   uuid: 3cf0a205-d6ab-4233-ab72-a1166dbe4ff0
   label: null
   weight: 0
-  layout: layout_threecol_33_34_33
+  layout: layout_onecol
   layout_settings: {  }
   page_title: '[term:name]'
   storage_type: page_manager
