POWR-240 Auto-generated changes when notification added

--- a/web/sites/default/config/views.view.search.yml
+++ b/web/sites/default/config/views.view.search.yml
@@ -85,6 +85,7 @@ display:
               guide: default
               alert: default
               event: default
+              notification: default
       fields:
         rendered:
           table: search_api_index_content
