POWR-240 Add permissions to view and create notifications

--- a/web/sites/default/config/group.role.bureau_office-admin.yml
+++ b/web/sites/default/config/group.role.bureau_office-admin.yml
@@ -92,3 +92,12 @@ permissions:
   - 'create group_media:video content'
   - 'view group_media:video content'
   - 'access group_media overview'
+  - 'create group_node:notification entity'
+  - 'delete any group_node:notification entity'
+  - 'delete own group_node:notification entity'
+  - 'update any group_node:notification entity'
+  - 'update own group_node:notification entity'
+  - 'view group_node:notification entity'
+  - 'view unpublished group_node:notification entity'
+  - 'create group_node:notification content'
+  - 'view group_node:notification content'
