--- a/web/sites/default/config/group.role.bureau_office-anonymous.yml
+++ b/web/sites/default/config/group.role.bureau_office-anonymous.yml
@@ -21,3 +21,4 @@ permissions:
   - 'view group_media:document entity'
   - 'view group_media:image entity'
   - 'view group_media:video entity'
+  - 'view group_node:notification entity'
