--- a/web/sites/default/config/group.role.elected_official-admin.yml
+++ b/web/sites/default/config/group.role.elected_official-admin.yml
@@ -49,12 +49,21 @@ permissions:
   34: 'view unpublished group_node:information entity'
   35: 'create group_node:information content'
   36: 'view group_node:information content'
-  47: 'create group_node:event entity'
-  48: 'delete any group_node:event entity'
-  49: 'delete own group_node:event entity'
-  50: 'update any group_node:event entity'
-  51: 'update own group_node:event entity'
-  52: 'view group_node:event entity'
-  53: 'view unpublished group_node:event entity'
-  54: 'create group_node:event content'
-  55: 'view group_node:event content'
+  37: 'create group_node:event entity'
+  38: 'delete any group_node:event entity'
+  39: 'delete own group_node:event entity'
+  40: 'update any group_node:event entity'
+  41: 'update own group_node:event entity'
+  42: 'view group_node:event entity'
+  43: 'view unpublished group_node:event entity'
+  44: 'create group_node:event content'
+  45: 'view group_node:event content'
+  92: 'create group_node:notification entity'
+  93: 'delete any group_node:notification entity'
+  94: 'delete own group_node:notification entity'
+  95: 'update any group_node:notification entity'
+  96: 'update own group_node:notification entity'
+  97: 'view group_node:notification entity'
+  98: 'view unpublished group_node:notification entity'
+  99: 'create group_node:notification content'
+  100: 'view group_node:notification content'
