--- a/web/sites/default/config/group.role.elected_official-member.yml
+++ b/web/sites/default/config/group.role.elected_official-member.yml
@@ -36,10 +36,17 @@ permissions:
   21: 'update own group_node:information entity'
   22: 'view group_node:information entity'
   23: 'view unpublished group_node:information entity'
-  27: 'create group_node:event entity'
-  28: 'delete any group_node:event entity'
-  29: 'delete own group_node:event entity'
-  30: 'update any group_node:event entity'
-  31: 'update own group_node:event entity'
-  32: 'view group_node:event entity'
-  33: 'view unpublished group_node:event entity'
+  24: 'create group_node:event entity'
+  25: 'delete any group_node:event entity'
+  26: 'delete own group_node:event entity'
+  27: 'update any group_node:event entity'
+  28: 'update own group_node:event entity'
+  29: 'view group_node:event entity'
+  30: 'view unpublished group_node:event entity'
+  62: 'create group_node:notification entity'
+  63: 'delete any group_node:notification entity'
+  64: 'delete own group_node:notification entity'
+  65: 'update any group_node:notification entity'
+  66: 'update own group_node:notification entity'
+  67: 'view group_node:notification entity'
+  68: 'view unpublished group_node:notification entity'
