--- a/web/sites/default/config/group.role.program-admin.yml
+++ b/web/sites/default/config/group.role.program-admin.yml
@@ -55,12 +55,21 @@ permissions:
   40: 'view unpublished group_node:information entity'
   41: 'create group_node:information content'
   42: 'view group_node:information content'
-  50: 'create group_node:event entity'
-  51: 'delete any group_node:event entity'
-  52: 'delete own group_node:event entity'
-  53: 'update any group_node:event entity'
-  54: 'update own group_node:event entity'
-  55: 'view group_node:event entity'
-  56: 'view unpublished group_node:event entity'
-  57: 'create group_node:event content'
-  58: 'view group_node:event content'
+  43: 'create group_node:event entity'
+  44: 'delete any group_node:event entity'
+  45: 'delete own group_node:event entity'
+  46: 'update any group_node:event entity'
+  47: 'update own group_node:event entity'
+  48: 'view group_node:event entity'
+  49: 'view unpublished group_node:event entity'
+  50: 'create group_node:event content'
+  51: 'view group_node:event content'
+  95: 'create group_node:notification entity'
+  96: 'delete any group_node:notification entity'
+  97: 'delete own group_node:notification entity'
+  98: 'update any group_node:notification entity'
+  99: 'update own group_node:notification entity'
+  100: 'view group_node:notification entity'
+  101: 'view unpublished group_node:notification entity'
+  102: 'create group_node:notification content'
+  103: 'view group_node:notification content'
