--- a/web/sites/default/config/group.role.program-anonymous.yml
+++ b/web/sites/default/config/group.role.program-anonymous.yml
@@ -16,4 +16,5 @@ permissions:
   1: 'view group_node:city_service entity'
   2: 'view group_node:news entity'
   3: 'view group_node:information entity'
-  5: 'view group_node:event entity'
+  4: 'view group_node:event entity'
+  9: 'view group_node:notification entity'
