--- a/web/sites/default/config/group.role.program-member.yml
+++ b/web/sites/default/config/group.role.program-member.yml
@@ -43,10 +43,17 @@ permissions:
   28: 'update own group_node:information entity'
   29: 'view group_node:information entity'
   30: 'view unpublished group_node:information entity'
-  34: 'create group_node:event entity'
-  35: 'delete any group_node:event entity'
-  36: 'delete own group_node:event entity'
-  37: 'update any group_node:event entity'
-  38: 'update own group_node:event entity'
-  39: 'view group_node:event entity'
-  40: 'view unpublished group_node:event entity'
+  31: 'create group_node:event entity'
+  32: 'delete any group_node:event entity'
+  33: 'delete own group_node:event entity'
+  34: 'update any group_node:event entity'
+  35: 'update own group_node:event entity'
+  36: 'view group_node:event entity'
+  37: 'view unpublished group_node:event entity'
+  69: 'create group_node:notification entity'
+  70: 'delete any group_node:notification entity'
+  71: 'delete own group_node:notification entity'
+  72: 'update any group_node:notification entity'
+  73: 'update own group_node:notification entity'
+  74: 'view group_node:notification entity'
+  75: 'view unpublished group_node:notification entity'
