--- a/web/sites/default/config/group.role.project-admin.yml
+++ b/web/sites/default/config/group.role.project-admin.yml
@@ -58,12 +58,21 @@ permissions:
   43: 'view unpublished group_node:information entity'
   44: 'create group_node:information content'
   45: 'view group_node:information content'
-  56: 'create group_node:event entity'
-  57: 'delete any group_node:event entity'
-  58: 'delete own group_node:event entity'
-  59: 'update any group_node:event entity'
-  60: 'update own group_node:event entity'
-  61: 'view group_node:event entity'
-  62: 'view unpublished group_node:event entity'
-  63: 'create group_node:event content'
-  64: 'view group_node:event content'
+  46: 'create group_node:event entity'
+  47: 'delete any group_node:event entity'
+  48: 'delete own group_node:event entity'
+  49: 'update any group_node:event entity'
+  50: 'update own group_node:event entity'
+  51: 'view group_node:event entity'
+  52: 'view unpublished group_node:event entity'
+  53: 'create group_node:event content'
+  54: 'view group_node:event content'
+  101: 'create group_node:notification entity'
+  102: 'delete any group_node:notification entity'
+  103: 'delete own group_node:notification entity'
+  104: 'update any group_node:notification entity'
+  105: 'update own group_node:notification entity'
+  106: 'view group_node:notification entity'
+  107: 'view unpublished group_node:notification entity'
+  108: 'create group_node:notification content'
+  109: 'view group_node:notification content'
