--- a/web/sites/default/config/group.role.project-anonymous.yml
+++ b/web/sites/default/config/group.role.project-anonymous.yml
@@ -17,4 +17,5 @@ permissions:
   2: 'view group_node:city_service entity'
   3: 'view group_node:guide entity'
   4: 'view group_node:information entity'
-  6: 'view group_node:event entity'
+  5: 'view group_node:event entity'
+  11: 'view group_node:notification entity'
