--- a/web/sites/default/config/group.role.project-member.yml
+++ b/web/sites/default/config/group.role.project-member.yml
@@ -42,10 +42,17 @@ permissions:
   27: 'update own group_node:information entity'
   28: 'view group_node:information entity'
   29: 'view unpublished group_node:information entity'
-  32: 'create group_node:event entity'
-  33: 'delete any group_node:event entity'
-  34: 'delete own group_node:event entity'
-  35: 'update any group_node:event entity'
-  36: 'update own group_node:event entity'
-  37: 'view group_node:event entity'
-  38: 'view unpublished group_node:event entity'
+  30: 'create group_node:event entity'
+  31: 'delete any group_node:event entity'
+  32: 'delete own group_node:event entity'
+  33: 'update any group_node:event entity'
+  34: 'update own group_node:event entity'
+  35: 'view group_node:event entity'
+  36: 'view unpublished group_node:event entity'
+  67: 'create group_node:notification entity'
+  68: 'delete any group_node:notification entity'
+  69: 'delete own group_node:notification entity'
+  70: 'update any group_node:notification entity'
+  71: 'update own group_node:notification entity'
+  72: 'view group_node:notification entity'
+  73: 'view unpublished group_node:notification entity'
