--- a/web/sites/default/config/group.role.bureau_office-member.yml
+++ b/web/sites/default/config/group.role.bureau_office-member.yml
@@ -72,3 +72,10 @@ permissions:
   - 'view group_media:video entity'
   - 'view unpublished group_media:video entity'
   - 'access group_media overview'
+  - 'create group_node:notification entity'
+  - 'delete any group_node:notification entity'
+  - 'delete own group_node:notification entity'
+  - 'update any group_node:notification entity'
+  - 'update own group_node:notification entity'
+  - 'view group_node:notification entity'
+  - 'view unpublished group_node:notification entity'
