--- a/web/sites/default/config/group.role.elected_official-outsider.yml
+++ b/web/sites/default/config/group.role.elected_official-outsider.yml
@@ -16,4 +16,5 @@ permissions:
   1: 'view group_node:news entity'
   2: 'view group_node:guide entity'
   3: 'view group_node:information entity'
-  5: 'view group_node:event entity'
+  4: 'view group_node:event entity'
+  10: 'view group_node:notification entity'
