--- a/web/sites/default/config/core.entity_view_display.node.notification.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.notification.teaser.yml
@@ -15,4 +15,7 @@ content:
   links:
     weight: 100
     region: content
-hidden: {  }
+hidden:
+  field_action_link: true
+  field_notification_severity: true
+  field_summary: true
