POWR-240 Limit content page notifications view content types Fixes error on content pages when a notification is created.

--- a/web/sites/default/config/views.view.group_notifications_content.yml
+++ b/web/sites/default/config/views.view.group_notifications_content.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.node.field_action_link
     - field.storage.node.field_notification_severity
     - field.storage.node.field_summary
+    - node.type.notification
   module:
     - group
     - link
@@ -464,6 +465,47 @@ display:
           expose:
             operator: ''
           group: 1
+        type:
+          id: type
+          table: node_field_data
+          field: type
+          relationship: gc__node
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            notification: notification
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+            argument: null
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
       sorts:
         changed:
           id: changed
