Hotfix-0731 Add pathauto patterns and group config for notification.

--- a/web/sites/default/config/workflows.workflow.editorial.yml
+++ b/web/sites/default/config/workflows.workflow.editorial.yml
@@ -13,6 +13,7 @@ dependencies:
     - node.type.guide
     - node.type.information
     - node.type.news
+    - node.type.notification
     - node.type.service_location
   module:
     - content_moderation
@@ -84,4 +85,5 @@ type_settings:
       - guide
       - information
       - news
+      - notification
       - service_location
