POWR-133 Response Image module and image alignment.

--- a/web/sites/default/config/core.entity_form_display.media.image.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.image.default.yml
@@ -9,7 +9,7 @@ dependencies:
     - media.type.image
   module:
     - content_moderation
-    - image
+    - image_widget_crop
 _core:
   default_config_hash: kyoAHlZTGIuGTaQuBblGBk8EhfnVKOl19_0j5WbpQqM
 id: media.image.default
@@ -18,11 +18,17 @@ bundle: image
 mode: default
 content:
   image:
-    type: image_image
+    type: image_widget_crop
     weight: 1
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
+      crop_preview_image_style: crop_thumbnail
+      crop_list: {  }
+      crop_types_required: {  }
+      show_crop_area: false
+      show_default_crop: true
+      warn_multiple_usages: false
     third_party_settings: {  }
     region: content
   moderation_state:
