--- a/web/sites/default/config/core.entity_view_display.media.image.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.default.yml
@@ -5,10 +5,10 @@ dependencies:
   config:
     - field.field.media.image.field_media_in_library
     - field.field.media.image.image
-    - image.style.large
     - media.type.image
+    - responsive_image.styles.paragraph_image
   module:
-    - image
+    - responsive_image
 _core:
   default_config_hash: VLDxfMVPTkd2xvOjFMCh3kWmaOYnd03zggFXuUXQVEY
 id: media.image.default
@@ -17,11 +17,11 @@ bundle: image
 mode: default
 content:
   image:
-    type: image
+    type: responsive_image
     weight: 1
     label: hidden
     settings:
-      image_style: large
+      responsive_image_style: paragraph_image
       image_link: ''
     third_party_settings: {  }
     region: content
