--- a/web/sites/default/config/core.entity_view_display.media.image.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.embedded.yml
@@ -7,8 +7,9 @@ dependencies:
     - field.field.media.image.field_media_in_library
     - field.field.media.image.image
     - media.type.image
+    - responsive_image.styles.paragraph_image
   module:
-    - image
+    - responsive_image
 _core:
   default_config_hash: FaHkkj9J9DxKQ-R7RNddSDq_d0D6UBY3hoKzoAQoGaw
 id: media.image.embedded
@@ -17,15 +18,16 @@ bundle: image
 mode: embedded
 content:
   image:
-    type: image
+    type: responsive_image
     weight: 0
     label: hidden
     settings:
-      image_style: ''
+      responsive_image_style: paragraph_image
       image_link: ''
     third_party_settings: {  }
     region: content
 hidden:
+  content_moderation_control: true
   created: true
   field_media_in_library: true
   name: true
