--- a/web/sites/default/config/core.entity_form_display.paragraph.image.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.image.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - entity_browser.browser.image_table_browser
     - field.field.paragraph.image.field_image
+    - field.field.paragraph.image.field_image_alignment
     - paragraphs.paragraphs_type.image
   module:
     - content_moderation
@@ -24,10 +25,16 @@ content:
       open: true
       selection_mode: selection_append
       field_widget_display_settings:
-        view_mode: thumbnail
+        view_mode: default
       field_widget_edit: false
     region: content
     third_party_settings: {  }
+  field_image_alignment:
+    weight: 2
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   moderation_state:
     type: moderation_state_default
     weight: 1
