--- a/web/sites/default/config/core.entity_view_display.paragraph.image.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.image.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.image.field_image
+    - field.field.paragraph.image.field_image_alignment
     - paragraphs.paragraphs_type.image
 id: paragraph.image.default
 targetEntityType: paragraph
@@ -12,11 +13,12 @@ mode: default
 content:
   field_image:
     type: entity_reference_entity_view
-    weight: 1
+    weight: 0
     label: hidden
     settings:
-      view_mode: default
+      view_mode: embedded
       link: false
     third_party_settings: {  }
     region: content
-hidden: {  }
+hidden:
+  field_image_alignment: true
