--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -101,6 +101,7 @@ module:
   rdf: 0
   redirect: 0
   redirect_404: 0
+  responsive_image: 0
   schemata: 0
   schemata_json_schema: 0
   search_api: 0
