POWR-243 Add action link field to Alert

--- a/web/sites/default/config/core.entity_form_display.node.alert.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.alert.default.yml
@@ -3,11 +3,13 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.alert.field_action_link
     - field.field.node.alert.field_severity
     - field.field.node.alert.field_summary
     - node.type.alert
   module:
     - content_moderation
+    - link
     - path
 id: node.alert.default
 targetEntityType: node
@@ -20,6 +22,14 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_action_link:
+    weight: 26
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+    type: link_default
+    region: content
   field_severity:
     weight: 1
     settings: {  }
