--- a/web/sites/default/config/core.entity_view_display.node.alert.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.alert.default.yml
@@ -3,10 +3,12 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.alert.field_action_link
     - field.field.node.alert.field_severity
     - field.field.node.alert.field_summary
     - node.type.alert
   module:
+    - link
     - options
     - panelizer
     - user
@@ -21,6 +23,18 @@ targetEntityType: node
 bundle: alert
 mode: default
 content:
+  field_action_link:
+    weight: 2
+    label: above
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    type: link
+    region: content
   field_severity:
     weight: 0
     label: above
