--- a/web/sites/default/config/field.storage.node.field_notification_severity.yml
+++ b/web/sites/default/config/field.storage.node.field_notification_severity.yml
@@ -12,10 +12,10 @@ type: list_string
 settings:
   allowed_values:
     -
-      value: warning
+      value: '20'
       label: Warning
     -
-      value: info
+      value: '30'
       label: Information
   allowed_values_function: ''
 module: options
